scala arraytest